# reservoir-id-smp

./: .gitignore  README.md  environment.yml  pyproject.toml
reservoir-id-smp/: README.md  README_SENTINEL.md
reservoir-id-smp/analysis/area_count/: calc_areas_regions.py  make_area_count_figs.ipynb  mapping.ipynb  property_analysis.ipynb  quickrun_allyears.sh  rasterize_municipalities.sh  warp_to_aea.sh
reservoir-id-smp/analysis/clean_summarize/: _border_ar.py  calc_hydropoly_areas.py  find_overlaps_badwater.py  find_overlaps_badwater_dilate_erode.py  make_figs_interview_area.ipynb  make_figs_landsat.ipynb  make_figs_sentinel.ipynb  mapping_allbrazil_landsat.ipynb  summarize_landsat.ipynb  summarize_sentinel.ipynb  write_out_new_rasters_10m.py  write_out_new_rasters_30m.py  write_out_new_rasters_combined.py
reservoir-id-smp/analysis/clip/: filter_municipalities.ipynb  filter_states_munis.py  warp_clip_wgs84.sh  warp_to_aea.sh
reservoir-id-smp/analysis/clouds/: cloud_filter.py  cloud_filter_fill.py
reservoir-id-smp/analysis/compare_landsats/: compare_full_maps.py
reservoir-id-smp/analysis/compare_previous_results/: README.md  calc_areas_find_overlaps.py  compare_macedo.py  compare_polys.ipynb  sicar_download.py  sicar_process.py  warp_mb_to_aea.sh  warp_souza_to_aea.sh
reservoir-id-smp/analysis/compare_sensors/: README.md  compare_full_maps.py  compare_ls_sentinel.py  landsat_comparisons.ipynb  landsat_gantt.ipynb  landsat_sentinel_comp.ipynb  summarize_comparisons.py
reservoir-id-smp/analysis/evaporation/: README.md  estimate_evapotranspiration.ipynb  pet_evapotranspiration_v2.ipynb
reservoir-id-smp/analysis/lulc/: README.md  annual_lc_summaries_interview_area.py  annual_lc_summaries_mt.py  calc_areas_count_regions_lulc.py  calc_transition_summaries.py  find_mb_most_recent_transition.py  lulc_figs.ipynb  lulc_figs_simple.ipynb  lulc_figs_w_gam.ipynb  make_area_count_figs.ipynb  make_area_count_figs_fraster_extract.ipynb  make_mb_transition_maps.py  make_shps.py  map.ipynb  poly_buffer_and_diff.py  poly_buffer_and_extract.py  poly_extract.py  process_lulc_csvs.py  process_poly_extract_parquet.py  process_sentinel_lulc_csv.py  process_single_lulc_csv.py  proximity_crops.sh  quick_calc_allyears.sh  warp_input.sh
reservoir-id-smp/analysis/manual_checks/: manual_checks.ipynb
reservoir-id-smp/analysis/municipalities/: README.md  clean_muni_data.py  find_stream_road_overlaps.py  muni_modeling.ipynb  muni_modeling_R.ipynb
reservoir-id-smp/analysis/precip_evap/: pet_evapotranspiration_v2.ipynb  precip_analysis.ipynb
reservoir-id-smp/analysis/properties/: interview_area_lulc_types.ipynb  interview_properties.ipynb  process_property_shp.py  prop_analysis.py
reservoir-id-smp/analysis/regions/: calc_strahler_order.py  calculate_flow_max.py  calculate_max_flow.py  fragmentation_calcs.ipynb  new_basin_figs_sentinel.ipynb  region_summaries_landsat.ipynb  region_summaries_sentinel.ipynb
reservoir-id-smp/analysis/remove_bad_water/: calc_hydropoly_areas.py  find_overlaps_badwater.py  make_figs.ipynb  make_figs_sentinel.ipynb  mapping_allbrazil.ipynb  merge_borders.py  quickrun_aea.sh  rasterize_hydropolys.sh  remove_small_waterbodies.py  write_out_new_rasters.py
reservoir-id-smp/analysis/weather/: precip_analysis.ipynb
reservoir-id-smp/annotation_prep/: README.md  build_input_vrt.sh  extract_tiles.py  extract_tiles_rgb.py  match_tiles.py  prep_labelbox_csv.sh
reservoir-id-smp/ee_export/: README.md
reservoir-id-smp/predict/: README.md  build_input_vrt_sentinel.sh  dataset.py  dataset_ee.py  dataset_multifile.py  ee_helpers.py  model.py  predict_smp.py  predict_smp_landsat.py  predict_smp_ls.py  predict_smp_sentinel.py  quick_swap_num_order.sh  repredict_smp_landsat.py  rio_merge_overlaps.py  tsp_wrapup.sh
reservoir-id-smp/predict/bash_scripts/: create_spot_vm.sh  create_vm.sh  full_postprocess.sh  full_pred_landsat.sh  full_pred_sentinel.sh  full_pred_sentinel_30m.sh  postprocess_landsat.sh  postprocess_sentinel.sh  postprocess_sentinel_30m.sh  prep_model_run.sh  restart.sh  (+16 more)
reservoir-id-smp/preprocess/: download_ims_masks.py  prep_smp_dataset.ipynb  prep_smp_dataset_nband_sentinel_nofp.ipynb  zip_and_cp_to_gstorage.sh
reservoir-id-smp/train/: README.md  _helper_datasets.py  _helper_model.py  eval_sentinel.ipynb  example_figures.ipynb  helper_datasets.py  landsat_eval.ipynb  landsat_prep.py  landsat_threshold_calcs.ipynb  post_prediction_eval.ipynb  predict_train_val_test.py  prep_landsat.py  prep_sentinel.ipynb  sentinel_eval.ipynb  sentinel_prep.ipynb  sentinel_train.ipynb  train_landsat.ipynb  train_smp_unet.ipynb
(+32 files in other folders)
