[project]
name = "reservoir-id-smp"
version = "0.3.0"
license = "GPL-3.0"
description = "Reproduction repo for reservoir segmentation in Brazil."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "affine==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "albucore==0.0.24",
    "albumentations==2.0.8",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "cftime==1.6.5",
    "charset-normalizer==3.4.4",
    "choreographer==1.2.1",
    "click==8.3.1",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cramjam==2.11.0",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.3.3",
    "cycler==0.12.1",
    "dask==2026.3.0",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fastparquet==2026.5.0",
    "filelock==3.20.3",
    "fiona==1.10.1",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2026.1.0",
    "geopandas==1.1.2",
    "h11==0.16.0",
    "h5netcdf==1.8.1",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.3.4",
    "idna==3.11",
    "imagecodecs==2026.3.6",
    "imageio==2.37.2",
    "importlib-metadata==9.0.0",
    "iniconfig==2.3.0",
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kaleido==1.2.0",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "lightning-utilities==0.15.2",
    "locket==1.0.0",
    "logistro==2.0.1",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "narwhals==2.20.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "netcdf4==1.7.4",
    "networkx==3.6.1",
    "neural-compressor>=3.8.1",
    "numpy>=2.4.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "opencv-python-headless==4.11.0.86",
    "openpyxl==3.1.5",
    "orjson==3.11.8",
    "packaging==26.0",
    "pandas==3.0.0",
    "parso==0.8.5",
    "partd==1.4.2",
    "pexpect==4.9.0",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "plotly==6.7.0",
    "pluggy==1.6.0",
    "prettytable==3.17.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==24.0.0",
    "pycocotools==2.0.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyogrio==0.12.1",
    "pyparsing==3.3.2",
    "pyproj==3.7.2",
    "pytest==9.0.3",
    "pytest-timeout==2.4.0",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.6.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rasterio==1.4.4",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rioxarray==0.19.0",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "schema==0.7.8",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "segmentation-models-pytorch==0.5.0",
    "setuptools==80.10.2",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "simplejson==4.1.1",
    "simsimd==6.5.12",
    "six==1.17.0",
    "stack-data==0.6.3",
    "stringzilla==4.6.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tifffile==2026.1.14",
    "timm==1.0.24",
    "toolz==1.1.0",
    "torch==2.10.0",
    "torchmetrics==1.8.2",
    "torchvision==0.25.0",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.6.0",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "wcwidth==0.5.0",
    "wrapt==2.0.1",
    "xarray==2026.4.0",
    "yarl==1.22.0",
    "zipp==3.23.1",
]
